--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
-beautifulsoup4==4.12.3
-certifi==2024.7.4
-charset-normalizer==3.3.2
-colorama==0.4.6
-crayons==0.4.0
-idna==3.6
-numpy==1.26.4
-pandas==2.2.0
-pymongo==4.6.3
-pytz==2024.1
-requests==2.32.0
-selenium==4.17.2
-termcolor==2.4.0
-webdriver-manager==3.5.2
+attrs==25.3.0
+beautifulsoup4==4.13.5
+bs4==0.0.2
+certifi==2025.8.3
+h11==0.16.0`
+idna==3.10
+outcome==1.3.0.post0
+PySocks==1.7.1
+selenium==4.35.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.8
+termcolor==3.1.0
+trio==0.30.0
+trio-websocket==0.12.2
+typing_extensions==4.14.1
+urllib3==2.5.0
+websocket-client==1.8.0
+wsproto==1.2.0
